force-app/main/default/objects/Inventory__c/fields/Blankets_and_Towels__c.field-meta.xml
<CustomField>
    <fullName>Blankets_and_Towels__c</fullName>
    <label>Blankets and Towels</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>