force-app/main/default/objects/Inventory__c/fields/Chew_Toys__c.field-meta.xml
<CustomField>
    <fullName>Chew_Toys__c</fullName>
    <label>Chew Toys</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>