force-app/main/default/objects/Inventory__c/fields/Crates__c.field-meta.xml
<CustomField>
    <fullName>Crates__c</fullName>
    <label>Crates</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>