force-app/main/default/objects/Inventory__c/fields/Food_Bag__c.field-meta.xml
<CustomField>
    <fullName>Food_Bag__c</fullName>
    <inlineHelpText>10 pounds bags</inlineHelpText>
    <label>Food Bag</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>