force-app/main/default/objects/Inventory__c/fields/Leashes__c.field-meta.xml
<CustomField>
    <fullName>Leashes__c</fullName>
    <label>Leashes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>