force-app/main/default/objects/Inventory__c/fields/Paper_Towels__c.field-meta.xml
<CustomField>
    <fullName>Paper_Towels__c</fullName>
    <inlineHelpText>Packs of 4</inlineHelpText>
    <label>Paper Towels</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>