force-app/main/default/objects/Inventory__c/validationRules/Negative_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Number</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Blankets_and_Towels__c &lt; 0,  
   Chew_Toys__c &lt; 0,
   Crates__c &lt; 0,
   Food_Bag__c &lt; 0,
   Paper_Towels__c &lt; 0, 
   Leashes__c &lt; 0)</errorConditionFormula>
    <errorMessage>You can not insert negative numbers</errorMessage>
</ValidationRule>